[package]
name = "blockchain"
version = "0.1.0"
authors = ["k-start <startkie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[[bin]]
name = "web-node"
path = "src/bin/web-node/main.rs"

[dependencies]
hex = "*"
crypto-hash = "*"
ring = "*"
warp = "*"