[package]
name = "blockchain"
version = "0.1.0"
authors = ["k-start <startkie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[[bin]]
name = "web-node"
path = "src/bin/web-node/main.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
ring = "0.16.20"
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.4.0"